Plugged up security hole for non-users
 On branch master
	modified:   gae_py/request.py
	modified:   gae_py/session.py
	modified:   test/config.yaml
	modified:   test/tests/users.py

--- a/test/config.yaml
+++ b/test/config.yaml
@@ -35,6 +35,9 @@ full:
     - test_getUser
     - test_putUser
     - test_deleteUser
+    - test_nonExistingUser_get
+    - test_nonExistingUser_put
+    - test_nonExistingUser_delete
 
   - name: NoUser
     tests:
