testrunner.py script sets temp admin
This would be a huge security issue if this automated user creation was
ever allowed to happen on the remote host.  However, it is necessary to
run tests on the local dev_appserver.

 On branch test_protocol
	modified:   gae_py/app.yaml
	modified:   gae_py/testsetup.py
	modified:   test/testrunner.py

--- a/gae_py/app.yaml
+++ b/gae_py/app.yaml
@@ -17,6 +17,10 @@ handlers:
 - url: /environs
   script: environs.py
 
+# Insecure, local only, to setup a tempory sys admin for testing.
+- url: /testsetup
+  script: testsetup.py
+
 # One ring to rule them all.
 - url: /.*
   script: request.py
